files and theories within a proper session context (like regular
"isabelle build"). Output of prover messages works roughly like
"isabelle build_log", while the theories are being processed.

Examples:

  isabelle process_theories -U -O HOL-Library.Multiset

  isabelle process_theories -U -O -o show_states HOL-Library.Multiset

  isabelle process_theories -f '~~/src/HOL/Examples/Seq.thy'

* The command-line tool "isabelle process" no longer supports option -T
to load individual theories via the "use_thy" function in Isabelle/ML.
The latter is still available as "Thy_Info.use_thy_legacy", notably for
"isabelle process -e ...", but it will be removed eventually. The proper
way to process individual theories under program control is via
"isabelle process_theories". INCOMPATIBILITY.

* System option "show_results" (default true) controls output of
toplevel command results (definitions, theorems) in batch-builds. In
interactive mode this is always enabled; in batch-builds it can be
disable like this:

    isabelle build -o show_results=false FOL

Option "show_results" is also the default for the configuration option
"show_results" within the formal context --- instead of "show_states"
that was used for this purpose before.

* Build cluster options support "settings" for specific host settings,
e.g. for Java heap size. See also $ISABELLE_HOME_USER/etc/registry.toml
or "isabelle build -H".

* SSH connections allow both bash and zsh as remote shell. This is
particularly important for macOS, where zsh is the default user shell.

* System option "build_progress_detailed" tells "isabelle build -v" to
output detailed information while processing theories, notably the
percentage and cumulated timing and long-running commands (see also
option "build_progress_threshold"). This requires an output channel
(terminal) that supports ANSI control sequences, notably for cursor
movement and deletion of previous output. The default is to output only